# Dynamic-ans

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TECHNICAL.md  agentns_technical_reference.docx  build_doc.js  docker-compose.yml  pyproject.toml
agentns/: __init__.py  client.py  geocoder.py  health_checker.py  server.py  server_selection.py
examples/: curl_quickstart.sh  mbta_transit_example.py  python_agent_startup.py  python_orchestrator.py
tests/: test_api.py
